# nbs-maestro

./: .gitignore  README.md  pyproject.toml
nbs_school/: hooks.py  modules.txt  patches.txt
nbs_school/accounting/: fee_invoicing.py  late_fees.py  sibling_discount.py
nbs_school/attendance/: absence_notification.py  custom_fields.py
nbs_school/config/: desktop.py  docs.py
nbs_school/crm/: auto_enrollment.py
nbs_school/fixtures/: Print Format.json
nbs_school/hr/: eosb_calculation.py  visa_alert.py  wps_file_generation.py
nbs_school/overrides/: print_format.py  weasyprint.py
nbs_school/patches/enable_track_changes/: __init__.py
nbs_school/patches/ensure_nbs_announcement_doctype/: __init__.py
nbs_school/patches/reload_nbs_announcement_doctype/: __init__.py
nbs_school/permissions/: assessment.py  attendance.py  course_schedule.py  fee.py  student.py
nbs_school/portal/: parent_api.py  payment_api.py  student_api.py
nbs_school/public/css/: portal-rtl.css  portal.css
nbs_school/reports/nbs_bso_isi_evidence/: nbs_bso_isi_evidence.js  nbs_bso_isi_evidence.json  nbs_bso_isi_evidence.py
nbs_school/reports/nbs_fee_outstanding/: nbs_fee_outstanding.js  nbs_fee_outstanding.json  nbs_fee_outstanding.py
nbs_school/reports/nbs_igcse_entry_summary/: nbs_igcse_entry_summary.js  (+2 more)
nbs_school/student_management/: guardian_linking.py  student_email.py  student_grouping.py
nbs_school/www/: announcements.html  announcements.py  parent-dashboard.html  parent-dashboard.py  payment-confirmation.html  payment.html  student-dashboard.html  student-dashboard.py
(+22 files in other folders)
